fixed overlapping (hopefully)

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
 }
 
 .trainer-text {
